@@ -152,9 +152,11 @@ maybe_crash(Key, Data) ->
      %% time:
      case S(NewVal) of
        true ->
-         snabbkaffe_collector:tp(Data#{ crash_kind => Key
-                                      , ?snk_kind  => snabbkaffe_crash
-                                      }),
+         snabbkaffe_collector:tp( debug
+                                , Data#{ crash_kind => Key
+                                       , ?snk_kind  => snabbkaffe_crash
+                                       }
+                                ),
          error(R);
        false ->
          ok
